--- a/setup.json.example
+++ b/setup.json.example
@@ -6,9 +6,13 @@
     "1.1.0.0/24": {
       "community": "[666:666]"
     },
-    "1.1.0.0/25": {}
+    "1.1.0.0/25": {},
+    "2.2.0.0/24": {}
   },
   "flapping": [
     "1.1.0.0/24"
+  ],
+  "flappingB": [
+    "2.2.0.0/24"
   ]
 }
